# MP

./: 2.cpp  3.cpp  aaa  aass  main.cpp  tema3-relacion.xopp  xd  yeah
UnPocoDeBase/: 1_clases.cpp  2_constructor.cpp  3_priv_setter_getter.cpp  4_constructor_setter_getter.cpp  aaaa
c1/: 1.cpp  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  c1  miProg
cmake/: Cmake_tutorial.xml  cmaketutorial.odt
mi_ejercicio/: CMakeLists.txt
mi_ejercicio/src/: main.cpp
parcial/ParcialC/RENATO/ParcialC/: CMakeLists.txt
parcial/ParcialC/RENATO/ParcialC/data/: input00.csv  input01.csv  input02.csv
parcial/ParcialC/RENATO/ParcialC/include/: VectorOperacion.h
parcial/ParcialC/RENATO/ParcialC/nbproject/: Package-Release.bash  configurations.xml
parcial/ParcialC/RENATO/ParcialC/nbproject/private/: configurations.xml  private.xml
parcial/ParcialC/RENATO/ParcialC/src/: VectorOperacion.cpp  main.cpp
parcial/Solucion/ParcialCTeacher/include/: Operacion.h  VectorOperacion.h
parcial/Solucion/ParcialCTeacher/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
parcial/Solucion/ParcialCTeacher/src/: .~lock.VectorOperacion.cpp#  Operacion.cpp  main.cpp  (+1 more)
tema2/: 1_4.cpp  1_4corregido.cpp  1_6.cpp  2_1.cpp  2_1corregido.cpp  2_2.cpp  4_12.CPP  4_13.cpp  4corregido.cpp  aaaa  xd
tema2/4.14/: ArrayDinamicoChar.cpp  ArrayDinamicoChar.h  leerCaracteres.cpp
tema2/4.15/: VectorSD.cpp  VectorSD.h  datos.txt  mostrar  mostrar.cpp
(+20 files in other folders)
